--- a/app/globals.css
+++ b/app/globals.css
@@ -2,6 +2,17 @@
   @tailwind components;
   @tailwind utilities;
 
+  
+.GoogleMap {
+  height: 50vh;
+  width: 50vw;
+}
+
+.map-container {
+  height: 100%;
+  width: 100%;
+}
+
   @layer base {
     :root {
       --background: 0 0% 100%;
